tests/errors/syn.unknown-directive.decl-def.or
main :: () -> void {
    @asdads x := 0;
    x;
};
